test/files/invalid/required_with_null.fbs
table Foo {
  x: string = null (required);
}