test/files/invalid/required_with_null.stderr
error: Cannot setup field as both required and optional
  ┌─ test/files/invalid/required_with_null.fbs:2:15
  │
2 │   x: string = null (required);
  │               ^^^^  -------- field was declared required here
  │               │      
  │               field was declared optional here

Error: Bailing because of errors
